<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_200dp"
        android:layout_marginBottom="@dimen/dimen_50dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/choose_photo"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/camera"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/buttonGallery"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/gallery"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonCamera"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:background="@drawable/rounded_button_cancel"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonGallery"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
